Thu, 29 Nov 2007 08:53:36 +0100 <thp@perli.net>
Support for itpc:// URLs

	* src/gpodder/util.py: Add support for adding "itpc://" URLs (these
	are simply http:// URLs with a different schema, for iTunes)

Tue, 27 Nov 2007 22:59:26 +0100 <thp@perli.net>
Draw channel stats (unplayed, downloaded) on channel navigator

	* bin/gpodder: We're in development again, so add "+svn"
	* src/gpodder/draw.py: Added
	* src/gpodder/gui.py: Fix import of renamed "channels_to_model";
	re-assign new column numbers for treeChannels' data model; add
	cell renderer for pill pixbuf and remove cell renderer for status text
	* src/gpodder/libpodcasts.py: Add episode_is_new() function to
	podcastChannel to check if an episode can be considered "new"; use the
	episode_is_new function in get_new_episodes; add get_episode_stats()
	after an idea from Paul Rudkin <paul@thegithouse.com>; re-factor
	channels_to_model and clean out old, unused code and columns

Mon, 26 Nov 2007 08:57:04 +0100 <thp@perli.net>
gPodder 0.10.2 "Ein schweineschnauzen Sandwich, bitte!" released

	* bin/gpodder: gPodder 0.10.2 released :)
	* doc/man/gpodder.1: gPodder 0.10.2 released :)
	* README: gPodder 0.10.2 released :)

Mon, 26 Nov 2007 08:52:49 +0100 <thp@perli.net>
Translation updates

	* data/messages.pot: Refreshed from source
	* data/po/*.po: Refreshed from messages.pot
	* data/po/de.po: Updated German translation

Sun, 25 Nov 2007 11:50:46 +0100 <thp@perli.net>
Make sure there is enough free disk space when saving OPML channel list

	* src/gpodder/gui.py: Notify user that there's some problem saving the
	current channel list when save_channels() return False
	* src/gpodder/libpodcasts.py: Pass-through the return value of
	gpodder.opml.Exporter.write so calling code knows if saving the
	channel list was successful or not
	* src/gpodder/opml.py: Check free disk space before saving OPML
	channels in Exporter.write; thanks to Jens Thiele <karme@berlios.de>