@@ -142,7 +142,15 @@ def get_free_disk_space(path):
     """
     Calculates the free disk space available to the current user
     on the file system that contains the given path.
+
+    If the path (or its parent folder) does not yet exist, this
+    function returns zero.
     """
+
+    path = os.path.dirname(path)
+    if not os.path.exists(path):
+        return 0
+
     s = os.statvfs(path)
 
     return s.f_bavail * s.f_bsize
